[Backend] Todo 패키지 리팩토링 (#199)
* todo를 업데이트하는 로직을 클래스로 분리하라

* 메소드 단위로 트랜잭션을 관리하도록 어노테이션을 붙여라

* Todo와 관련 도메인을 저장하는 로직이 들어나게 이름을 수정하라

* todo id로 todo를 조회하는 로직을 구현하라

* todo 와 status 존재 여부 검사를 DTO에 위임하라

* 투두 조회 로직을 레파지토리 조회에서 TodoDetailService의 메소드 호출로 수정하라

* Task 조회를 레파지토리 직접 조회가 아니라 TaskDetailService 메소드를 호출하도록 수정하라

* Todo 생성 컨트롤러 테스트를 작성하라

* 임포트 문을 명시적으로 선언하라

* todo와 pomodoro 조회를 한방 쿼리로 수정하고 테스트를 작성하라

* 사용하지 않는 의존성을 제거하라

* 빠진 닫기 괄호를 추가하라

---------

Co-authored-by: leekyuwon <kyuwon.lee@makinarocks.ai>